<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:background="@color/color_black"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_black"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_orange"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_orange"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_pink"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_pink"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_green"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_green"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_blue"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_blue"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_yellow"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_yellow"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_black"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_red"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_red"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_brown"
            android:layout_marginBottom="@dimen/color_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_brown"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

        <TextView
            android:gravity="center"
            android:background="@color/color_purple"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_height"
            android:text="@string/color_purple"
            android:textSize="@dimen/color_text_size"
            android:textColor="@color/color_white"
            />

    </LinearLayout>

</ScrollView>